apps/uptime-kuma/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: main
      namespace: traefik # name of the gateway
  hostnames:
    - uptime.k8s.hyperion.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 80
